Fix: build without gradlew script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,25 +23,24 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
       with:
-        gradle-version: '8.2.1' # 强制指定版本，防止插件应用失败
+        gradle-version: '8.2.1' # 这里会自动安装环境所需的 Gradle
 
     - name: Build with Gradle
       id: build_step
-      # 使用 --no-daemon 模式让日志更连续，易于分析
-      run: ./gradlew assembleDebug --stacktrace --no-daemon
-      continue-on-error: true # 允许失败以便执行后面的错误提取步骤
+      # 注意：这里去掉了 ./ 前缀
+      run: gradle assembleDebug --stacktrace --no-daemon
+      continue-on-error: true
 
     - name: Extract Errors on Failure
       if: steps.build_step.outcome == 'failure'
       run: |
         echo "### ❌ 构建失败分析报告" >> $GITHUB_STEP_SUMMARY
-        echo "从庞杂日志中自动提取的关键错误信息如下：" >> $GITHUB_STEP_SUMMARY
+        echo "关键错误提取：" >> $GITHUB_STEP_SUMMARY
         echo "\`\`\`text" >> $GITHUB_STEP_SUMMARY
-        # 抓取包含 Error, Exception, Failed, Caused by 的前后5行，并去重
-        ./gradlew assembleDebug --stacktrace --no-daemon > build_log.txt 2>&1 || true
+        gradle assembleDebug --stacktrace --no-daemon > build_log.txt 2>&1 || true
         grep -C 5 -E "Error|Exception|Failed|Caused by" build_log.txt | head -n 50 >> $GITHUB_STEP_SUMMARY
         echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-        exit 1 # 提取完信息后，正式宣告任务失败
+        exit 1
 
     - name: Upload APK
       if: steps.build_step.outcome == 'success'
