--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- 必须添加下面这一行 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
+        ... >
+        ...
+    </application>
+</manifest>
+    
     <application
         android:allowBackup="true"
         android:label="5-Year Growth"
